--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,16 @@
 	url = https://github.com/btbatw/symposium-2016.git
 	branch = website
 
+[submodule "2019"]
+	path = 2019
+	url = https://github.com/btbatw/symposium-2019.git
+	branch = website
+
+[submodule "2020"]
+	path = 2020
+	url = https://github.com/btbatw/symposium-2020.git
+	branch = website
+
 [submodule "2021"]
 	path = 2021
 	url = https://github.com/btbatw/symposium-2021.git
