--- a/_data/nav-links.yml
+++ b/_data/nav-links.yml
@@ -3,7 +3,7 @@
 - label: Events
   url: /events
 - label: Podcast
-  url: /podcast.html
+  url: /podcast
 - label: Blog
   url: /blog
 - label: Symposium
