--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,8 @@
 	path = 2018
 	url = https://github.com/btbatw/symposium-2018.git
 	branch = website
+
+[submodule "2022"]
+	path = 2022
+	url = https://github.com/btbatw/symposium-2022.git
+	branch = website
