Update podcast committee for season 2023

--- a/_data/podcast-committee/roles.yml
+++ b/_data/podcast-committee/roles.yml
@@ -1,8 +1,6 @@
-'2022':
-- Chief producer
-- Co-Executives/Hosts
-- Sound Editors
+'2023':
+- Chief Producer
+- Host
 - Promotion
-- Cover Design
-- Website Design
-- Consulting board
+- Sound Editor
+- Consulting Board
