Recover 2022 podcast roles

--- a/_data/podcast-committee/roles.yml
+++ b/_data/podcast-committee/roles.yml
@@ -4,3 +4,11 @@
 - Promotion
 - Sound Editor
 - Consulting Board
+'2022':
+- Chief producer
+- Co-Executives/Hosts
+- Sound Editors
+- Promotion
+- Cover Design
+- Website Design
+- Consulting board
