--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,7 @@
 	path = 2023
 	url = https://github.com/btbatw/symposium-2023.git
 	branch = gh-pages
+[submodule "2024"]
+	path = 2024
+	url = https://github.com/btbatw/symposium-2024.git
+	branch = gh-pages
